# gcr-resilience-map

./: .gitignore  404.html  CLAUDE.md  LICENSE  README.md  config.yml  environment.yml  index.html  mkdocs.yml  mkgendocs.yml  pyproject.toml  requirements.txt  search.html  sitemap.xml
.claude/: settings.local.json
config/: Readme.md  config.yml  full_query  readme.md
data/: .~lock.2021-GHS-Index-April-2022.csv#  after_manual_screening.csv  after_manual_screening_sample.csv  mag 7 and above eruptions.xlsx  sample_results_screened.csv  volcano_list.csv  volcano_list.tsv
output/: ("global catastrophic risk" OR "existential risk") AND ((resilience) OR (mitigation)) AND (famine)_results.csv  ("global catastrophic risk" OR "existential risk") AND ((resilience) OR (mitigation)) AND (nuclear)_results.csv  ("global catastrophic risk" OR "existential risk") AND ((resilience) OR (mitigation)) AND (pandemic)_results.csv  ("global catastrophic risk" OR "existential risk") AND ((resilience) OR (mitigation)) AND (volcano)_results.csv  ((resilience) OR (mitigation)) AND ("abrupt sunlight reduction")_results.csv  ((resilience) OR (mitigation)) AND ("black sky hazard")_results.csv  ((resilience) OR (mitigation)) AND ("cascading risk")_results.csv  ((resilience) OR (mitigation)) AND ("catastrophic infrastructure loss")_results.csv  ((resilience) OR (mitigation)) AND ("coronal mass ejection")_results.csv  ((resilience) OR (mitigation)) AND ("engineered pathogen")_results.csv  ((resilience) OR (mitigation)) AND ("extreme pandemic")_results.csv  VOSViewerNetwork.txt  all_results.ris  (+18 more)
(+85 files in other folders)
