[build-system]
requires = ["setuptools>=61.2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gcr-resilience-map"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pandas>=1.4.3",
    "numpy>=1.23.1",
    "matplotlib>=3.5.1",
    "geopandas>=0.12.0",
    "pyyaml>=6.0",
    "openpyxl>=3.1.5",
    "adjusttext>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.1.2",
    "adjusttext>=0.8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
